--- a/server/index.html
+++ b/server/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To_Do</title>
     <link rel="stylesheet" href="main.css" />
-    <script src="main.js" defer></script>
+    <script src="todo/todo.js" defer></script>
   </head>
   <body>
     <div id="items">
